--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,13 +1,17 @@
 version: "2.0"
 
 rules:
-
-- rule: Say goodbye anytime the user says goodbye
-  steps:
-  - intent: goodbye
-  - action: utter_goodbye
-
-- rule: Say 'I am a bot' anytime the user challenges
-  steps:
-  - intent: bot_challenge
-  - action: utter_iamabot
+  - rule: Basic call
+    steps:
+      - intent: call
+      - action: utter_general_greeting
+      - action: utter_disposition
+  - rule: Basic greeting
+    steps:
+      - intent: greet
+      - action: action_greet_user
+  - rule: Basic out of scope
+    steps:
+      - intent: out_of_scope
+      - action: utter_confusion
+      - action: utter_possibilities
