--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,30 +1,14 @@
 version: "2.0"
 
 stories:
-
-- story: happy path
+####### BASIC GREETINGS ######
+- story: general greeting
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_great
-  - action: utter_happy
+  - intent: greet_general
+  - action: action_greet_user
 
-- story: sad path 1
+- story: greeting daytime
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: affirm
-  - action: utter_happy
+  - intent: greet_time_of_day
+  - action: action_greet_user
 
-- story: sad path 2
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: deny
-  - action: utter_goodbye
