--- a/data/comands.yml
+++ b/data/comands.yml
@@ -17,3 +17,5 @@ nlu:
     - execute a [calculadora](resource)
     - executar [utorrent](resource)
     - rodar [steam](resource) 
+    - iniciar o [navegador](resource)
+    - iniciar o [league of legends](resource)
