--- a/config.yml
+++ b/config.yml
@@ -12,24 +12,21 @@ pipeline:
   max_ngram: 4
   token_pattern: '(?u)\b\w+\b'
 - name: CRFEntityExtractor
-# - name: "DucklingEntityExtractor"
-#   url: "http://localhost:8000"
-#   dimensions: ["time"]
-#   locale: "pt_IE"
-#   timezone: "America/Sao_Paulo"
-#   timeout : 3
 - name: EntitySynonymMapper
+- name: DucklingEntityExtractor
+  url: "http://duckling.rasa.com:8000"
+  dimensions: ["time"]
+  locale: "pt_IE"
+  timezone: "America/Sao_Paulo"
+  timeout : 3
 - name: DIETClassifier
   entity_recognition: false
   epochs: 100
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
-# # No configuration for policies was provided. The following default policies were used to train your model.
-# # If you'd like to customize them, uncomment and adjust the policies.
-# # See https://rasa.com/docs/rasa/policies for more information.
-#   - name: MemoizationPolicy
-#   - name: TEDPolicy
-#     max_history: 5
-#     epochs: 100
-#   - name: RulePolicy
+- name: MemoizationPolicy
+- name: TEDPolicy
+  max_history: 10
+  epochs: 200
+- name: RulePolicy
