--- a/domain.yml
+++ b/domain.yml
@@ -1,6 +1,13 @@
-# Actions
+version: "3.1"
+
+intents:
+- call
+- greet_general
+- greet_time_of_day
+- out_of_scope
+- open_resource
+
 actions:
-# General actions
 - action_greet_user
 - utter_general_greeting
 - utter_name_greeting
@@ -12,38 +19,41 @@ actions:
 - utter_confirm
 - utter_deny
 - utter_disposition
-
-# Validations
-- validate_reminder_form
-
-# Comands actions
 - action_start_resource
 - action_register_event
-# Opening resource responses
 - utter_opening_resource
 - utter_resource_notfound
-# Register reminders
-- utter_reminder_set
-- utter_ask_reminder_date
-- utter_ask_reminder_time
-- utter_ask_reminder_name
-
-# - utter_confirm_reminder
-
-# Registering events
-# - utter_registered_event
-# - utter_ask_event_name
-# - utter_ask_event_day
-# - utter_ask_event_time
-# - utter_want_to_register_details
-# - utter_ask_event_details
-# Out of scope actions
 - utter_confusion
 - utter_possibilities
 
-# Responses
+entities:
+  - time
+  - resource
+
+slots:
+  time_period:
+    type: categorical
+    values:
+      - morning
+      - afternoon
+      - evening
+      - night
+    influence_conversation: false
+    mappings:
+    - type: custom
+  resource:
+    type: list
+    influence_conversation: false
+    mappings:
+    - type: from_entity
+      entity: resource
+  last_opened_resource:
+    type: any
+    mappings:
+    - type: custom
+
+
 responses:
-  # General responses
   utter_affirm:
   - text: Sim
   - text: Isso aí
@@ -61,7 +71,6 @@ responses:
   - text: Desculpe, mas não...
   utter_disposition:
   - text: O que posso fazer por você?
-  - text: Em que posso ajudar?
   utter_confusion:
   - text: Hm...
   - text: Ok...?
@@ -82,7 +91,6 @@ responses:
   - text: Olá {name}!
   - text: Oi {name}!
   - text: Hey {name}!
-  # Opening resource responses
   utter_opening_resource:
   - text: Entendido! Iniciando procedimentos para abrir {resource}!
   - text: Ok, trabalhando para abrir {resource}!
@@ -92,117 +100,8 @@ responses:
   - text: Desculpe, mas não consigo executar o que pediu. 
   - text: Não reconheço o nome deste recurso... tem certeza de que está certo?
   - text: Ocorreu um erro! Não consegui identificar este recurso...
-
-  utter_reminder_set:
-  - text: Ok, avisarei quando a hora chegar!
-  - text: Prontinho! Vou te lembrar no horário, pode deixar!
-
-  utter_ask_reminder_date:
-  - text: Para qual dia deseja configurar este lembrete?
-
-  utter_ask_reminder_time:
-  - text: Qual o horário?
-
-  utter_ask_reminder_name:
-  - text: Qual nome devo dar a este lembrete?
-
-
-  # utter_confirm_reminder:
-  # - text: Deseja realmente configurar o remindere {reminder_name} para {reminder_date}, as {reminder_time}
-  # - text: Se eu entendi, quer ser avisado as {reminder_time} do dia {reminder_data}, certo?
-
-  # utter_registered_event:
-  # - text: Ok, registrei o evento na agenda!
-  # utter_ask_event_name:
-  # - text: Como devo registrar este evento? 
-  # - text: Qual nome devo dar a este evento na agenda?
-  # utter_ask_event_day:
-  # - text: Que dia este evento ocorrerá?
-  # - text: Quando este evento ocorrerá?
-  # utter_ask_event_time:
-  # - text: A que horas esse evento ocorrerá?
-  # utter_want_to_register_details:
-  # - text: Gostaria de registrar alguma descrição do evento?
-  # utter_ask_event_details:
-  # - text: Qual a descrição do evento?
-  # - text: Gostaria de adicionar alguma nota a este evento?
-
-  # Out of scope responses
   utter_possibilities:
   - text: "Não tenho muitas habilidades no momento, mas elas estão em desenvolvimento!"
-
-# Intents
-intents:
-# General intents
-- call
-- greet_general
-- greet_time_of_day
-- inform
-# Out of scope intents
-- out_of_scope
-# Comands intents
-### Open Resource Intent
-- open_resource
-### Reminders setting
-- set_reminder
-### Register event intent - FUTURE IMPLEMENTATION
-# - register_event
-# - detail_event_name
-# - detail_event_time
-
-# Entities
-entities:
-# General entities
-- time
-# Comands entities
-### Opening resources entities
-- resource
-
-### Registering events entities  - FUTURE IMPLEMENTATION
-# - event_name
-# - event_time
-# - event_day
-# - event_details
-
-# Slots
-slots:
-  # General slots
-  time_period:
-    type: categorical
-    values:
-      - morning
-      - afternoon
-      - evening
-      - night
-    influence_conversation: false
-  resource:
-    type: list
-    influence_conversation: false
-  last_opened_resource:
-    type: any
-  time:
-    type: any
-    influence_conversation: false
-  reminder_date:
-    type: any
-    auto_fill: false
-    influence_conversation: false
-  reminder_time:
-    type: any
-    auto_fill: false
-    influence_conversation: false
-  reminder_name:
-    type: any
-    auto_fill: false
-    influence_conversation: false
-
-forms:
-  reminder_form:
-    ignored_intents: 
-    - out_of_scope
-    required_slots:
-        reminder_name:
-          - type: from_text
 
 # Configs
 session_config:
